--- a/clynicalsafe/website/templates/contact.html
+++ b/clynicalsafe/website/templates/contact.html
@@ -133,26 +133,27 @@
                         <h2 class="contact-title">Pongase en contacto</h2>
                     </div>
                     <div class="col-lg-8">
-                        <form class="form-contact contact_form" method="post" id="contactForm" novalidate="novalidate">
+                        <form class="form-contact contact_form" method="POST" action="{% url 'contact'%}">
+                            {% csrf_token %}
                             <div class="row">
                                 <div class="col-12">
                                     <div class="form-group">
-                                        <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Escriba su mensaje'" placeholder=" Escriba su mensaje"></textarea>
+                                        <textarea class="form-control w-100" name="mensaje" id="mensaje"  cols="30" rows="9" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Escriba su mensaje'" placeholder=" Escriba su mensaje"></textarea>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <input class="form-control valid" name="name" id="name" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Escriba su nombre" placeholder="Escriba su nombre">
+                                        <input class="form-control valid" name="nombre" id="nombre" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Escriba su nombre" placeholder="Escriba su nombre">
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <input class="form-control valid" name="email" id="email" type="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" placeholder="Email">
+                                        <input class="form-control valid" name="correo" id="correo" type="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" placeholder="Email">
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-group">
-                                        <input class="form-control" name="subject" id="subject" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Escriba el tema" placeholder="Escriba el tema">
+                                        <input class="form-control" name="tema"  id="tema" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Escriba el tema" placeholder="Escriba el tema">
                                     </div>
                                 </div>
                             </div>
