--- a/clynicalsafe/website/templates/register.html
+++ b/clynicalsafe/website/templates/register.html
@@ -14,6 +14,8 @@
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
+    <link rel="stylesheet" href="{% static 'website/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/owl.carousel.min.css' %}">
     <link rel="stylesheet" href="{% static 'website/css/magnific-popup.css' %}">
     <link rel="stylesheet" href="{% static 'website/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'website/css/themify-icons.css' %}">
@@ -24,6 +26,7 @@
     <link rel="stylesheet" href="{% static 'website/css/slicknav.css' %}">
     <link rel="stylesheet" href="{% static 'website/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'website/css/responsive.css' %}">
+    <link rel="stylesheet" href="{% static 'website/css/Doctors.css' %}">
 
 
 </head>
@@ -111,38 +114,6 @@
     <!-- service_area_start -->
     
 
-    <!-- welcome_docmed_area_start -->
-    <div class="welcome_docmed_area">
-        <div class="container"> <!-- Emergency_contact start -->
-     <div class="Emergency_contact">
-        <div class="conatiner-fluid p-0">
-            <div class="row no-gutters">
-                <div class="col-xl-6">
-                    <div class="single_emergency d-flex align-items-center justify-content-center emergency_bg_1 overlay_skyblue">
-                        <div class="info">
-                            <h3>Para cualquier emergencia</h3>
-                            <p>contactanos al siguiente numero.</p>
-                        </div>
-                        <div class="info_button">
-                            <a href="#" class="boxed-btn3-white">+10 378 4673 467</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="single_emergency d-flex align-items-center justify-content-center emergency_bg_2 overlay_skyblue">
-                        <div class="info">
-                            <h3>Pide tu Cita ahora</h3>
-                            <p>preciona aqui para pedir tu cita</p>
-                        </div>
-                        <div class="info_button">
-                            <a href="#" class="boxed-btn3-white">Agenda una cita</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Emergency_contact end -->
 
             <div class="row">
                 <div class="col-xl-6 col-lg-6">
