Nueva Pagina Agendar citas y demas cambios

--- a/clynicalsafe/website/templates/index.html
+++ b/clynicalsafe/website/templates/index.html
@@ -99,6 +99,14 @@
                                     </li>
                                     <li><a href="Doctors.html">Doctores</a></li>
                                     <li><a href="contact.html">Contactanos</a></li>
+
+                                    {% if user.username == Samuel%}
+                                    <h1>siu</h1>
+                                    {%else%}
+                                    <h1>no</h1>
+
+                               {% endif %}
+
                                 </ul>
                             </nav>
                         </div>
